--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600;700;800&display=swap');
+
 * {
   box-sizing: border-box;
+  font-family: 'Sora', sans-serif;
 }
 
 body {
@@ -10,13 +13,16 @@ body {
   margin: 0px;
 }
 
+nav, .nav-links {
+  background-color: black;
+}
+
 .nav-links {
-  margin: 0px;
+  margin: 0px 30px;
   list-style: none;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: black;
   height: 40px;
   padding-left: 0px;
 }
@@ -26,15 +32,69 @@ body {
   color: white;
   flex-grow: 1;
   text-align: center;
-  font-size: 20px;
   height: 100%;
 }
 
-.nav-links a:hover {
-  text-decoration: none;
-  background-color: rgb(54, 54, 54);
+.nav-links li {
+  height: 100%;
+  font-size: 20px;
+  line-height: 40px;
+  transition: all 0.3s ease-out;
 }
 
-.nav-links li {
-  line-height: 20px;
+.nav-links li:hover {
+  background-color: rgb(94, 94, 94);
+}
+
+footer {
+  background-color: black;
+  color: white;
+  text-align: center;
+  padding: 10px;
+}
+/* Shop */
+
+.catalog {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items:center;
+  margin: 10px;
+  gap: 20px;
+}
+
+.catalog a div {
+  
+
+}
+
+.catalog a {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  text-decoration: none;
+  color: black;
+  padding: 20px;
+  box-shadow: 0 4px 8px 0 rgb(27, 27, 27), 0 3px 5px 0 rgba(10, 10, 10, 0.911);
+}
+
+.image-wrapper {
+  max-width: 30%;
+  min-width: 400px;
+  display: inline-block;
+  overflow: hidden;
+}
+
+.catalog img {
+  max-width: 400px;
+  min-width: 400px;
+  height: auto;
+  vertical-align: middle;
+  transition: all 0.3s ease-in-out;
+}
+
+.catalog img:hover { 
+  transform: scale(1.1);
+  opacity: 0.8;
 }
